<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:background="@drawable/popup_layout_background"
    android:layout_height="520dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/popup_image_carview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/popup_margin"
        android:layout_marginTop="@dimen/popup_margin"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/popup_image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:scaleType="centerCrop"
            android:src="@drawable/blank_2" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_media_name"
        style="@style/TitletextStyle"
        android:layout_width="190dp"
        android:layout_height="85dp"
        android:layout_marginLeft="@dimen/popup_margin"
        android:gravity="center_vertical"
        android:text="@string/default_media_name"
        app:layout_constraintBottom_toBottomOf="@+id/popup_image_carview"
        app:layout_constraintStart_toEndOf="@+id/popup_image_carview"
        app:layout_constraintTop_toTopOf="@+id/popup_image_carview" />

    <ImageView
        android:id="@+id/popup_close"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginRight="@dimen/default_margin"
        android:src="@drawable/ic_close"
        app:tint="?android:colorSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/popup_image_carview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TitletextStyle"
        android:id="@+id/popup_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/popup_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_image_carview" />

    <TextView
        android:id="@+id/popup_category_value"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/popup_margin"
        android:text="@string/default_category_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_category" />

    <TextView
        android:id="@+id/popup_description"
        style="@style/TitletextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="@dimen/popup_margin"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_category_value" />

    <TextView
        android:id="@+id/popup_description_value"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/popup_margin"
        android:text="@string/default_media_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_description" />

    <ImageView
        android:id="@+id/popup_play"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_play"
        app:tint="?android:colorSecondary"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>